resources/css/style.css
html{
  font-family: "Raleway"; "Helvetica", sans-serif;
  font-size: 16px;
}

body {
  line-height: 1.4;
  /*max-width: 1600px;*/
  color: hsl(0, 0%, 35%);
  margin: 0 auto;
}

h1 {
  font-weight:800;
  color: hsl(0, 0%, 25%);
}

.container {
  display: flex;
  padding: 0.5rem 1.5rem;
}

.wide-box {
  width: 60%;
  display: flex;
  flex-direction: column;
}

.narrow-box {
  display: flex;
  flex-direction: column;
  width: 40%;
  padding-left: 1.5rem;
}

/*@media only screen and (max-width: 525px) {
  .container {
    display: block;
  }
  .wide-box {
    width: 100%;
    display:block;
  }
  .narrow-box {
    display: block;
    width: 100%;
  }
}*/

.mini-box {
  display: flex;
  align-items: center;
  padding-bottom: 0.5rem;
  margin 0 0 0.5rem 1rem;

}
.mini-box img {
  width: 35%;
  height: auto;
  padding: 1rem 1rem;
}
.mini-box-text {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 1.5rem;
  width: 65%;
}

.mini-box-text a {
  color: rgb(30,144,255);
  text-decoration: none;
}

/* Header */
header {
  margin: 0 1.5rem;
}
header img{
  padding-right: .2rem;
  height: 3rem;

}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  height: 4rem;
  font-family: "Ubuntu"; "Helvetica", sans-serif;
}
nav .logo-name {
  display: flex;
  align-items: center;
}

header h4 {
  font-size: 2rem;
  text-transform: uppercase;
}

header h4 .firstword {
  color: hsl(0, 0%, 25%);
}

header h4 .secondword {
  color: hsl(0, 0%, 45%);
}

nav ul {
  margin-right: 1.5rem;
}

ul li {
  display: inline;
  padding: 0 1rem;
  color: hsl(0, 0%, 45%);
}

.tablet-menu {
  display: none;
}
.mobile-menu {
  display: none;
}

@media only screen and (max-width: 880px) {
  header .menu {
    display: none;
  }
  header .tablet-menu {
    display: flex;
    width: auto;
    justify-content: space-between;
    margin: 1rem 0;
  }
}
@media only screen and (max-width: 525px) {
    header .logo-name {
      display: none;
    }
    header .tablet-menu {
      display: none;
    }

    header .mobile-menu {
      display: flex;
      width: 100%;
      justify-content: space-between;
      margin: 1rem 0;
    }
}

/* Banner */
.banner {
  display: flex;
  background-color: hsl(0, 0%, 85%);
}
.banner img {
  max-width: 100%;
  height: auto;
  display: block;
  overflow: hidden;
  padding: 2rem 1.5rem;
}
.banner .narrow-box {
  justify-content: center;
  align-items: flex-start;
}
.banner-text {
  display: flex;
  flex-direction: column;
  color: hsl(0, 0%, 35%);
  font-family: "Raleway", "Helvetica", sans-serif;
}

.banner-text h1 {
    color: hsl(0, 0%, 25%);
  }

.button {
    width: 60%;
    background-color: rgb(105, 105, 105);
    color: white;
    margin-top: 1.5rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    text-align: center;
    border-radius: 25px;
  }

@media only screen and (max-width: 525px) {
    .banner {
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0 auto;
    }
    .banner .wide-box {
      width: 100%;
    }
    .banner .wide-box img {
      width: auto;
      height: auto;
      padding: 1rem 1rem;
    }
    .banner .narrow-box {
      width: 100%;
    }
    .banner-text {
      padding: 0 1.5rem 0.5rem 1rem;
      align-items: center;
    }
    .banner-text h3 {
      margin-right: 0.5rem;
    }
    .banner .button {
      width: 50%;
      align-self: center;
      margin: 0.5rem 4rem 1rem 0;
    }
  }
/* Info Box */
.info-box {
  display: flex;
}

.info-box .wide-box img {
  max-width: 100%;
  height: auto;
  display: block;
}

/*  Courses */
.course-box h1 {
  text-align: center;
}
.course-box {
  display: inline-block;
  background-color: hsl(0, 0%, 85%);

  color: rgb(105, 105, 105);
}

.course-array {
  display: inline-flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-left: 4.5rem;
  margin-right: 4.5rem;
}

.course {
  background-color: white;
  margin-right: 1rem;
  margin-bottom: 2rem;
  width: 300px;
}

.course-text {
  padding-left: 1rem;
  text-align: left;
}

.course-text #course-title {
  padding: 0.5rem 0;
}

.course-text #classes {
  font-weight: 300;
  flex-direction: column;
  align-items: flex-start;
}
.course img {
  width: 300px;
}

/*Thesis Exhibit section  */
.thesis-box {
  display: inline-block;
  color: rgb(105, 105, 105);
}

.thesis-box h1{
  text-align: center;
}
.thesis-inner-box {
  display: flex;
  align-items: flex-start;
}

.thesis-box .wide-box video {
  max-width: 100%;
  height: auto;
  display: block;
}

.thesis-box #fisma {
  background-color: hsl(0, 0%, 85%);
  color: hsl(0, 0%, 35%)
}

/* Footer */
footer p {
  display: inline;
  padding: 0 1rem;
  color: rgb(105, 105, 105);
}

